--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^11.13.5",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
