--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.13.5",
     "next": "15.0.4",
